--- a/index.html
+++ b/index.html
@@ -115,6 +115,19 @@
                     <div class="col-md-6 my-2 ">
                         <div class="card border-0 d-flex">
                             <div class="card-body flex-fill">
+                                <h4 class="card-title text-style1 fw-bold">REDES SOCIALES</h4>
+                                <hr class="my-2 border-3">
+
+                                <ul class="text-decoration-none">
+                                    <li><a href="https://github.com/Alesguga">Github</a></li>
+                                    <li><a href="https://www.linkedin.com/in/alejandro-guti%C3%A9rrez-4b863b295/">Linkedin</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 my-2 ">
+                        <div class="card border-0 d-flex">
+                            <div class="card-body flex-fill">
                                 <h4 class="card-title text-style1 fw-bold">IDIOMAS</h4>
                                 <hr class="my-2 border-3">
 
@@ -201,6 +214,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
 </body>
 
