--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>MI CV </title>
+    <title>Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -10,202 +10,43 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/Style2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <header class=" text-center py-3">
+<body class="bg-dark">
 
-        <div class="container bg-white rounded py-3">
-            <h1 class="py-4 text-style1 fw-bold ">Alejandro Gutiérrez </h1>
-            <h2 class="text-style2 fw-lighter">DESARROLLADOR DE APLICACIONES MULTIPLATAFORMA
-            </h2>
-        </div>
-    </header>
     <main>
-        <div class="container shadow rounded-3 py-4">
-            <h3 class="text-start font1 m-0 pt-1 fw-bold">
-                Perfil
-            </h3>
 
-            <hr class="my-2 border-3 py-2">
-            <div class="container">
-                <p class="font1">
-                    Estudiante de Desarrollo de Aplicaciones Multiplataforma, busco la oportunidad de poner en
-                    práctica todo lo que he aprendido en una gran compañía que me ayude a crecer
-                    profesionalmente. Mi objetivo es seguir aprendiendo.
-                    <br>
-                    Soy una persona motivada, adaptable y con capacidad de trabajar tanto en equipo como
-                    individualmente.
-                </p>
+        <img src="img/Esquinas.png" alt="" width="200" class="position-absolute top-0 start-0 ms-xxl-5 mt-3">
+        <img src="img/Esquinas2.png" alt="" width="200" class="position-absolute bottom-0 end-0 me-xxl-5 mb-3">
+        <div class="row position-absolute top-0 end-0 me-xxl-5 mt-3 pt-5">
+            <div class="col-md-4">
+                <a href="https://github.com/Alesguga"><img src="img/GIT.svg" alt="" width="30"
+                        class=" top-0 end-0 me-xxl-5 mt-3 img-zoom svg-img"></a>
             </div>
-            <div>
-                <div class="row py-3 mb-5">
-                    <div class="col-md-6 my-2 ">
-                        <div class="card border-0 d-flex">
-                            <div class="card-body flex-fill">
-                                <h4 class="card-title text-style1 fw-bold">CONTACTO</h4>
-                                <hr class="my-2 border-3">
-
-                                <ul class="text-decoration-none ul1">
-                                    <li>
-                                        <p class="text-style1">Movil: +34 677- 679- 011 </p>
-                                    </li>
-                                    <li>
-                                        <p class="text-style1">Email: alexgutygalan11@gmail.com</p>
-                                    </li>
-                                    <li class="mb-3">
-                                        <a class="enlace-maps text-decoration-none"
-                                            href="https://maps.app.goo.gl/xs1F3LoSeBJL3tum7">Direccion: Rda
-                                            Buenavista
-                                            Nº39-P5</a>
-                                    </li>
-                                    <li>
-                                        <p class="text-style1">Localidad: Toledo 45005</p>
-                                    </li>
-
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 my-2 ">
-                        <div class="card border-0 d-flex">
-                            <div class="card-body flex-fill">
-                                <h4 class="card-title text-style1 fw-bold">EDUCACION</h4>
-                                <hr class="my-2 border-3">
-
-                                <ul class="text-decoration-none ul1">
-                                    <li>
-                                        <h5>Bachillerato Científico-Tecnológico</h5>
-                                    </li>
-                                    <li>
-                                        <p>IES Carlos Ill-Toledo 2020-2022</p>
-                                    </li>
-                                </ul>
-                                <ul class="text-decoration-none ul1">
-                                    <li>
-                                        <h5>Desarrollo de aplicaciones Multiplataforma</h5>
-                                    </li>
-                                    <li>
-                                        <p>IES Azarquiel-Toledo 2022-Actualidad</p>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 my-2 ">
-                        <div class="card border-0 d-flex">
-                            <div class="card-body flex-fill">
-                                <h4 class="card-title text-style1 fw-bold">APTITUDES - PUNTOS FUERTES</h4>
-                                <hr class="my-2 border-3">
-                                <ul>
-                                    <li>Java (JPA, Netbeans)</li>
-                                    <li>Kotlin (Firebase, Retrofit, SQlite)</li>
-                                    <li>Oracle SQLdev</li>
-                                    <li>Frontend (React-Native)</li>
-                                    <li>HTML-5 BS-5</li>
-                                    <li>Trabajo en equipo</li>
-                                    <li>Aplicaciones escritorio C#</li>
-                                    <li>Apps y Webs con acceso a BBDD</li>
-
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 my-2 ">
-                        <div class="card border-0 d-flex">
-                            <div class="card-body flex-fill">
-                                <h4 class="card-title text-style1 fw-bold">REDES SOCIALES</h4>
-                                <hr class="my-2 border-3">
-
-                                <ul class="text-decoration-none">
-                                    <li><a href="https://github.com/Alesguga">Github</a></li>
-                                    <li><a href="https://www.linkedin.com/in/alejandro-guti%C3%A9rrez-4b863b295/">Linkedin</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 my-2 ">
-                        <div class="card border-0 d-flex">
-                            <div class="card-body flex-fill">
-                                <h4 class="card-title text-style1 fw-bold">IDIOMAS</h4>
-                                <hr class="my-2 border-3">
-
-                                <ul class="text-decoration-none">
-                                    <li>Español- Lengua nativa</li>
-                                    <li>Inglés- Fluidez tanto en la comunicación oral como escrita.</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 my-2">
-                        <div class="card border-0 d-flex">
-                            <div class="card-body flex-fill">
-                                <h4 class="card-title text-style1 fw-bold">AFICIONES</h4>
-                                <hr class="my-2 border-3">
-
-                                <ul class="list-unstyled text-decoration-none ul1">
-                                    <div class="row align-items-center text-center">
-
-                                        <li class="col-md-4 py-2">
-                                            <img src="img/plane.png" class="w-25 img-fluid" alt="">
-                                            <p class="text-style3 pt-3">VIAJAR</p>
-                                        </li>
-                                        <li class="col-md-4 py-2">
-                                            <img src="img/bass-guitar.png" class="img-fluid" alt="" width="55">
-                                            <p class="text-style3 pt-3">BAJO</p>
-                                        </li>
-                                        <li class="col-md-4 py-2">
-                                            <img src="img/run.png" class="img-fluid" width="55" alt="">
-                                            <p class="text-style3 pt-3">RUNNING</p>
-                                        </li>
-                                    </div>
-                                    <div class="row align-items-center text-center">
-                                        <li class="col-md-6 py-2">
-                                            <img src="img/books.png" class="img-fluid" width="55" alt="">
-                                            <p class="text-style3 pt-3">LEER</p>
-                                        </li>
-                                        <li class="col-md-6 py-2">
-                                            <img src="img/videogame.png" class="img-fluid" width="55" alt="">
-                                            <p class="text-style3 pt-3">VIDEOJUEGOS</p>
-                                        </li>
-                                    </div>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 my-2">
-                        <div class="card border-0">
-                            <div class="card-body">
-                                <h4 class="card-title text-style1 fw-bold">Descarga mi CV</h4>
-                                <hr class="my-2 border-3">
-                                <h5>Pulsa <a href="CV/CV Alejandro Gutierrez.pdf" download>aquí</a> para descargar el
-                                    archivo CV.</h5>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+            <div class="col-md-4">
+                <a href="page2.html"><img src="img/cv-file-interface-symbol-svgrepo-com.svg" alt="" width="30"
+                        class=" top-0 end-0 me-xxl-3 mt-3 img-zoom svg-img"></a>
             </div>
-
-
+            <div class="col-md-4">
+                <a href="https://www.linkedin.com/in/alejandro-guti%C3%A9rrez-4b863b295/"><img src="img/LKD.svg" alt=""
+                        width="30" class=" top-0 end-0 me-xxl-1 mt-3 img-zoom svg-img"></a>
+            </div>
+        </div>
+        <div class="position-absolute top-50 start-50 translate-middle">
+            <h1 class="fw-lighter mb-4 text-white inter">Bienvenido.</h1>
+            <h5 class="fw-lighter text-white inter">¡Hola! Soy Alex, actualmente estoy finalizando el ciclo de DAM y
+                estoy
+                interesado en lenguajes como Kotlin
+                y Java en la parte de desarrollo web. También estoy aprendiendo React Native y SQL. <br>
+                En la esquina superior puedes echar un vistazo a mi currículum y mis redes sociales. :)</h5>
         </div>
 
     </main>
 
-    <div class="footer">
-        <div id="button"></div>
-        <div id="container">
-            <div id="cont">
-                <div class="footer_center">
-                    <div class="container rounded bg-white text-center m-2">
-                        <h3 class="text-secondary ">Alejandro Gutiérrez Galán</h3>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -214,8 +55,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
-
 </body>
 
 </html>
