--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Alex</title>
+    <link rel="icon" href="img/agg-high-resolution-logo-white-transparent 1.png" type="image/png">
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -20,20 +21,21 @@
 
     <main>
 
-        <img src="img/Esquinas.png" alt="" width="200" class="position-absolute top-0 start-0 ms-xxl-5 mt-3">
-        <img src="img/Esquinas2.png" alt="" width="200" class="position-absolute bottom-0 end-0 me-xxl-5 mb-3">
+        <img src="img/Esquinas.png" alt="" width="200" class="position-absolute top-0 img-fluid start-0 ms-xxl-5 mt-3">
+        <img src="img/Esquinas2.png" alt="" width="200"
+            class="position-absolute bottom-0 img-fluid end-0 me-xxl-5 mb-3">
         <div class="row position-absolute top-0 end-0 me-xxl-5 mt-3 pt-5">
             <div class="col-md-4">
                 <a href="https://github.com/Alesguga"><img src="img/GIT.svg" alt="" width="30"
-                        class=" top-0 end-0 me-xxl-5 mt-3 img-zoom svg-img"></a>
+                        class=" top-0 end-0 me-xxl-5 mt-3 img-zoom img-fluid svg-img"></a>
             </div>
             <div class="col-md-4">
                 <a href="page2.html"><img src="img/cv-file-interface-symbol-svgrepo-com.svg" alt="" width="30"
-                        class=" top-0 end-0 me-xxl-3 mt-3 img-zoom svg-img"></a>
+                        class=" top-0 end-0 me-xxl-3 mt-3 img-zoom img-fluid svg-img"></a>
             </div>
             <div class="col-md-4">
                 <a href="https://www.linkedin.com/in/alejandro-guti%C3%A9rrez-4b863b295/"><img src="img/LKD.svg" alt=""
-                        width="30" class=" top-0 end-0 me-xxl-1 mt-3 img-zoom svg-img"></a>
+                        width="30" class=" top-0 end-0 me-xxl-1 mt-3 img-zoom img-fluid svg-img"></a>
             </div>
         </div>
         <div class="position-absolute top-50 start-50 translate-middle">
