--- a/page2.html
+++ b/page2.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>MI CV </title>
+    <link rel="icon" href="img/agg-high-resolution-logo-white-transparent 1.png" type="image/png">
+
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -120,7 +122,9 @@
 
                                 <ul class="text-decoration-none">
                                     <li><a href="https://github.com/Alesguga">Github</a></li>
-                                    <li><a href="https://www.linkedin.com/in/alejandro-guti%C3%A9rrez-4b863b295/">Linkedin</a></li>
+                                    <li><a
+                                            href="https://www.linkedin.com/in/alejandro-guti%C3%A9rrez-4b863b295/">Linkedin</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -190,6 +194,7 @@
 
 
         </div>
+
 
     </main>
 
